# libcoroutin

./: .gitignore  CMakeLists.txt  README.md
include/coro/: async_scope.h  auto_reset_event.h  awaitable_traits.h  broken_promise.h  fmap.h  inline_scheduler.h  is_awaitable.h  on_scope_exit.h  operation_cancelled.h  resume_on.h  schedule_on.h  sequence_barrier.h  sequence_range.h  sequence_traits.h  spin_mutex.h  spin_wait.h  thread_pool.h  when_all.h  when_all_ready.h
include/coro/awaitable/: async_auto_reset_event.h  async_latch.h  async_manual_reset_event.h  async_mutex.h  multi_producer_sequencer.h  sequence_barrier.h  single_consumer_async_auto_reset_event.h  single_consumer_event.h  single_producer_sequencer.h
include/coro/cancellation/: cancellation_registration.h  cancellation_source.h  cancellation_state.h  cancellation_token.h  operation_cancelled.h
include/coro/detail/: any.h  get_awaiter.h  is_awaiter.h  lightweight_manual_reset_event.h  linux.h  lock_free_queue.h  macos.h  macos_io_operation.h  manual_lifetime.h  remove_rvalue_reference.h  sync_wait.h  sync_wait_task.h  unwrap_reference.h  void_value.h  when_all_counter.h  when_all_ready_awaitable.h  when_all_task.h
include/coro/io/: file.h  file_buffering_mode.h  file_open_mode.h  file_read_operation.h  file_share_mode.h  file_write_operation.h  io_service.h  read_only_file.h  read_write_file.h  readable_file.h  thread_pool.h  writable_file.h  write_only_file.h
include/coro/net/: ip_address.h  ip_endpoint.h  ipv4_address.h  ipv4_endpoint.h  ipv6_address.h  ipv6_endpoint.h  socket.h  socket_accept_operation.h  socket_connect_operation.h  socket_disconnect_operation.h  socket_helpers.h  socket_recv_from_operation.h  socket_recv_operation.h  socket_send_operation.h  socket_send_to_operation.h
include/coro/types/: async_generator.h  generator.h  recursive_generator.h  shared_task.h  task.h
src/: CMakeLists.txt
src/coro/: async_auto_reset_event.cpp  async_manual_reset_event.cpp  async_mutex.cpp  auto_reset_event.cpp  cancellation_registration.cpp  cancellation_source.cpp  cancellation_state.cpp  cancellation_token.cpp  file.cpp  file_read_operation.cpp  file_write_operation.cpp  io_service.cpp  lightweight_manual_reset_event.cpp  read_only_file.cpp  read_write_file.cpp  readable_file.cpp  socket.cpp  socket_accept_operation.cpp  socket_connect_operation.cpp  socket_disconnect_operation.cpp  socket_helpers.cpp  socket_recv_from_operation.cpp  socket_recv_operation.cpp  socket_send_operation.cpp  socket_send_to_operation.cpp  spin_mutex.cpp  spin_wait.cpp  thread_pool.cpp  writable_file.cpp  write_only_file.cpp
test/: CMakeLists.txt  async_auto_reset_event_tests.cpp  async_generator_tests.cpp  async_latch_tests.cpp  async_manual_reset_event_tests.cpp  async_mutex_tests.cpp  cancellation_tests.cpp  counted.cpp  counted.h  generator_tests.cpp  io_service_tests.cpp  multi_producer_sequencer_tests.cpp  recursive_generator_tests.cpp  scheduling_operator_tests.cpp  shared_task_tests.cpp  socket_tests.cpp  sync_wait_tests.cpp  task_test.cpp  task_tests.cpp  test.cpp  thread_pool_test.cpp  thread_pool_tests.cpp  when_all_ready_tests.cpp  when_all_tests.cpp
test/doctest/: doctest.cmake  doctest_add_tests.cmake
